--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "dev": "turbo run dev"
   },
   "devDependencies": {
+    "prisma": "^7.2.0",
     "turbo": "^2.0.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^7.2.0",
+    "prismabox": "^1.1.26"
   }
 }
