--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@aethern/shared": "workspace:*",
     "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "better-auth": "^1.4.15",
     "elysia": "^1.4.22"
   }
